--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -42,8 +42,9 @@
           <i class="icon ion-happy-outline"></i>
           About Us
         </ion-item>
-        <ion-item menu-close ng-repeat="itm in categories" href='#/app/products/{{progId}}/{{itm.id}}'>
-        <img src="img/1.jpg" height="20px" />
+        <ion-item class="item-icon-left"  menu-close ng-repeat="itm in categories" href='#/app/products/{{progId}}/{{itm.id}}'>
+         <i class="icon ion-ios-pricetags"></i>
+       
           {{itm.name}}
         </ion-item>
         <ion-item menu-close href="#/app/demo">
