WIP: Sharing button

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -27,8 +27,8 @@
         <a class="tab-item" ng-click="vm.previous()">
             <i class="icon ion-ios-arrow-left"></i> Previous
         </a>
-        <a class="tab-item" ng-click="vm.addToLike()">
-            <i class="icon ion-ios-heart-outline"></i> Like
+        <a class="tab-item" ng-click="vm.share()">
+            <i class="icon ion-speakerphone"></i> Share
 		 </a>
         <a class="tab-item">
             <i class="icon ion-ios-cart-outline" ng-click="vm.checkout()"></i> Buy
