--- a/www/templates/forgetPassword.html
+++ b/www/templates/forgetPassword.html
@@ -1,5 +1,15 @@
 <ion-view>
 <ion-content>
-Forget password
+	<form ng-submit="vm.resetPassword()">
+	 <div class="list">
+                <label class="item item-input">
+                    <span class="input-label">Email</span>
+                    <input type="email" ng-model="vm.username" ng-minlength="5" ng-maxlength="20" required>
+                </label>
+              
+                <label class="item">
+                    <button class="button button-block button-positive">Resend Password</button>
+            </div>
+	</form>
 </ion-content>
 </ion-view>
