--- a/www/templates/aboutUs.html
+++ b/www/templates/aboutUs.html
@@ -12,7 +12,7 @@ Megamall Tower, 4th Floor
 PO BOX 73500
 Sharjah UAE</div>
   <div class="col">
-  <a href="https://map.google.com"><img src="/img/map.png"></a>
+  <a href="https://map.google.com"><img src="img/map.png"></a>
   </div>
     </div>
 </div>
@@ -22,17 +22,13 @@ Sharjah UAE</div>
   <div class="item item-text-wrap">
   <div class="list">
 
-  <div class="item item-button-right">
-    00971123456789
-    <button class="button button-positive">
-      <i class="icon ion-ios-telephone"></i>
-    </button>
+  <div class="item">
+   <a href="tel:+971525404488" class="button button-positive">Call Us: +971 52 540 4488 </a>
   </div>
-  <div class="item item-button-right">
-    info@bus.com
-    <button class="button button-positive">
-      <i class="icon ion-ios-email"></i>
-    </button>
+  <div class="item">
+   <a href="mailto:info@wariyum.com" class="button button-positive">Mail Us: info@wariyum.com </a>
+
+  
   </div>
  <!--  <div class="item item-button-right">
   View on Map 
