--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -2,7 +2,7 @@
     <ion-content>
         <div class="card" ng-show="vm.productsCheckedOut.length === 0">
             <div class="item item-divider">
-                Hey! your card is Empty.
+                Hey! your cart is Empty.
             </div>
             <div class="item item-text-wrap">
                 <img src="img/empty-cart.png" width="100%" />
