--- a/www/templates/checkout.html
+++ b/www/templates/checkout.html
@@ -8,7 +8,7 @@
                 <img src="img/empty-cart.png" width="100%" />
             </div>
         </div>
-   
+
         <div class="list">
             <a class="item item-avatar" ng-repeat="itm in vm.productsCheckedOut track by $index">
                 <img src="{{vm.imgUrl + itm.product.imageUrl[0]}}" />
@@ -25,7 +25,7 @@
                         <button class="button button-icon icon ion-ios-plus-outline" ng-click="vm.incrementQty(itm.id)"></button>
                     </div>
                     <div class="col">
-                        <span class="label">{{itm.qty}}</span>
+                        <span class="label">{{itm.qty}}Nos</span>
                     </div>
                     <div class="col">
                         <button class="button button-icon icon ion-ios-minus-outline" ng-click="vm.decrementQty(itm.id)"></button>
