WIP: Add to cart in home page

--- a/www/templates/productDetail.html
+++ b/www/templates/productDetail.html
@@ -4,22 +4,22 @@
             <div class="item">
                 <h1>{{vm.productDetail.name}}</h1>
             </div>
-             <ion-slide-box on-slide-changed="slideChanged(index)">
+            <ion-slide-box on-slide-changed="slideChanged(index)">
                 <ion-slide ng-repeat="itm in vm.productDetail.imageUrl track by $index">
-                  
+
                     <div id="logo">
-                        <img style="width:80%" cache-src="{{vm.imgUrl + itm}}">
+                        <img style="width:80%" src="{{vm.imgUrl + itm}}">
                     </div>
                 </ion-slide>
             </ion-slide-box>
-           
-           <div style="height:50px;color:red;font-weight: bold;">
-            <span>AED {{vm.productDetail.unitPrice}}
-             </span>
-              <img height="40px" ng-show="vm.productDetail.showOffer"  style="float:right;position:top;" src="img/special-offer.jpg">
-              </div>
 
-           <div class="item item-text-wrap" ng-bind-html="vm.productDetail.description"></div>
+            <div style="height:50px;color:red;font-weight: bold;">
+                <span>AED {{vm.productDetail.unitPrice}}
+             </span>
+                <img height="40px" ng-show="vm.productDetail.showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
+            </div>
+
+            <div class="item item-text-wrap" ng-bind-html="vm.productDetail.description"></div>
             <!-- <br> -->
         </div>
     </ion-content>
@@ -29,7 +29,7 @@
         </a>
         <a class="tab-item" ng-click="vm.share()">
             <i class="icon ion-speakerphone"></i> Share
-		 </a>
+        </a>
         <a class="tab-item">
             <i class="icon ion-ios-cart-outline" ng-click="vm.checkout()"></i> Buy
         </a>
@@ -38,5 +38,4 @@
         </a>
     </div>
 </ion-view>
-a a a
-a
+a a a a
