--- a/www/templates/productLists.html
+++ b/www/templates/productLists.html
@@ -1,22 +1,23 @@
-
 <ion-view view-title="{{vm.header}}" ng-init="vm.init()">
     <ion-content>
-    
+
         <ion-list ng-show="vm.noDataBanner === false">
             <div class="card product-list" ng-repeat="itm in vm.productCols">
                 <div class="row">
                     <div class="col">
-                        <img class="product-list-item-img" cache-src="{{vm.imageUrl + itm[0].imageUrl[0]}}" height="40px" />
+                        <a href="#/app/productDetails/{{itm[0].id}}">
+                            <img class="product-list-item-img" src="{{vm.imageUrl + itm[0].imageUrl[0]}}" height="40px" />
+                        </a>
                         <p><b>{{itm[0].name}}</b></p>
                         <img height="40px" ng-show="itm[0].showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
                         <p style="margin-right: 25%;">{{itm[0].description}}</p>
                         <button ng-show="itm.unitPrice" class="button  icon"> AED {{itm[0].unitPrice}} </button>
-                        <a href="#/app/productDetails/{{itm[0].id}}" class="button button-small  button-positive">Show Details</a>
-                      
-                    
+                        <button ng-click="vm.addToCart(itm[0].id)" class="button button-small  button-positive">ADD CART</button>
+
+                        <!--itm[0].id-->
                     </div>
                     <div class="col product-list-item-left" ng-show="{{itm[1]}}">
-                        <img class="product-list-item-img" cache-src="{{vm.imageUrl + itm[1].imageUrl[0]}}" height="40px" />
+                        <img class="product-list-item-img" src="{{vm.imageUrl + itm[1].imageUrl[0]}}" height="40px" />
                         <p><b>{{itm[1].name}}</b></p>
                         <img height="40px" ng-show="itm[1].showOffer" style="float:right;position:top;" src="img/special-offer.jpg">
                         <p style="margin-right: 25%;">{{itm[1].description}}</p>
